# fastapi-lesson

./: .gitignore  README.md  base.md  main.py  main_launch.py  pyproject.toml  requirements.txt
app/: application.py
app/common/: __init__.py
app/common/exceptions/: globalexption.py
app/modules/user/: __init__.py  controller.py  service.py
app/settings/: __init__.py  base.py  development.py  production.py  setting.py
core/app/: __init__.py
core/libs/logger/: __init__.py  v1.py
core/middleware/: __init__.py  base.py  request_response.py
core/plugins/: __init__.py  pluginbase.py
core/plugins/globalrequest/: __init__.py  bind_.py  request.py
core/plugins/loguru/: bind_.py  client.py  contextvar.py  enums.py  logger.py  middleware.py
core/plugins/swaggerui/: __init__.py
core/plugins/swaggerui/static/: redoc.standalone.js  swagger-ui-bundle.js
core/tools/: json_helper.py  router.py
lesson/: base.md  example.py  morse_code.py  常用函数.md
